Aletrações na galeria do portfolio

--- a/contato.html
+++ b/contato.html
@@ -51,12 +51,14 @@
 		<section id="contato" class="hero is-primary is-fullheight">
 			<div class="hero-body">
 				<div class="container">
-					<h1 class="title">
-					Contato
-					</h1>
-					<h2 class="subtitle">
-					Aqui vai o subtitulo
-					</h2>
+					<div class="heading has-text-centered">
+						<h1 class="title">
+							Contato
+						</h1>
+						<h2 class="subtitle">
+						Contato Subtitulo
+						</h2>
+					</div>
 				</div>
 			</div>
 		</section>
