--- a/portfolio.html
+++ b/portfolio.html
@@ -51,12 +51,14 @@
 		<section id="portfolio" class="hero is-warning is-fullheight">
 			<div class="hero-body">
 				<div class="container">
-					<h1 class="title is-medium">
-					Portfolio
-					</h1>
-					<h2 class="subtitle">
-					Aqui vai o subtitulo
-					</h2>
+					<div class="heading has-text-centered">
+						<h1 class="title">
+							Portfólio
+						</h1>
+						<h2 class="subtitle">
+						Portfólio Subtitulo
+						</h2>
+					</div>
 					<div class="columns is-multiline is-mobile">
 						<div class="column is-one-mobile is-half-tablet is-one-quarter-desktop">
 							<div class="card">
@@ -67,22 +69,14 @@
 								</div>
 								<div class="card-content">
 								    <div class="media">
-									    <div class="media-left">
-									        <figure class="image is-32x32">
-									          <img src="http://placehold.it/64x64" alt="Image">
-									        </figure>
-									    </div>
 								    	<div class="media-content">
 								        	<p class="title is-5">John Smith</p>
-								        	<p class="subtitle is-6">@johnsmith</p>
 								      	</div>
 							   		</div>
 						    		<div class="content">
 						      			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						      			Phasellus nec iaculis mauris. <a href="#">@bulmaio</a>.
-						      			<a href="#">#css</a> <a href="#">#responsive</a>
+						      			Phasellus nec iaculis mauris.
 						      			<br>
-						      			<small>11:09 PM - 1 Jan 2016</small>
 						    		</div>
 								</div>
 							</div>
@@ -96,22 +90,14 @@
 								</div>
 								<div class="card-content">
 								    <div class="media">
-									    <div class="media-left">
-									        <figure class="image is-32x32">
-									          <img src="http://placehold.it/64x64" alt="Image">
-									        </figure>
-									    </div>
 								    	<div class="media-content">
 								        	<p class="title is-5">John Smith</p>
-								        	<p class="subtitle is-6">@johnsmith</p>
 								      	</div>
 							   		</div>
 						    		<div class="content">
 						      			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						      			Phasellus nec iaculis mauris. <a href="#">@bulmaio</a>.
-						      			<a href="#">#css</a> <a href="#">#responsive</a>
+						      			Phasellus nec iaculis mauris.
 						      			<br>
-						      			<small>11:09 PM - 1 Jan 2016</small>
 						    		</div>
 								</div>
 							</div>
@@ -125,22 +111,14 @@
 								</div>
 								<div class="card-content">
 								    <div class="media">
-									    <div class="media-left">
-									        <figure class="image is-32x32">
-									          <img src="http://placehold.it/64x64" alt="Image">
-									        </figure>
-									    </div>
 								    	<div class="media-content">
 								        	<p class="title is-5">John Smith</p>
-								        	<p class="subtitle is-6">@johnsmith</p>
 								      	</div>
 							   		</div>
 						    		<div class="content">
 						      			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						      			Phasellus nec iaculis mauris. <a href="#">@bulmaio</a>.
-						      			<a href="#">#css</a> <a href="#">#responsive</a>
+						      			Phasellus nec iaculis mauris.
 						      			<br>
-						      			<small>11:09 PM - 1 Jan 2016</small>
 						    		</div>
 								</div>
 							</div>
@@ -154,22 +132,14 @@
 								</div>
 								<div class="card-content">
 								    <div class="media">
-									    <div class="media-left">
-									        <figure class="image is-32x32">
-									          <img src="http://placehold.it/64x64" alt="Image">
-									        </figure>
-									    </div>
 								    	<div class="media-content">
 								        	<p class="title is-5">John Smith</p>
-								        	<p class="subtitle is-6">@johnsmith</p>
 								      	</div>
 							   		</div>
 						    		<div class="content">
 						      			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						      			Phasellus nec iaculis mauris. <a href="#">@bulmaio</a>.
-						      			<a href="#">#css</a> <a href="#">#responsive</a>
+						      			Phasellus nec iaculis mauris.
 						      			<br>
-						      			<small>11:09 PM - 1 Jan 2016</small>
 						    		</div>
 								</div>
 							</div>
@@ -183,22 +153,14 @@
 								</div>
 								<div class="card-content">
 								    <div class="media">
-									    <div class="media-left">
-									        <figure class="image is-32x32">
-									          <img src="http://placehold.it/64x64" alt="Image">
-									        </figure>
-									    </div>
 								    	<div class="media-content">
 								        	<p class="title is-5">John Smith</p>
-								        	<p class="subtitle is-6">@johnsmith</p>
 								      	</div>
 							   		</div>
 						    		<div class="content">
 						      			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						      			Phasellus nec iaculis mauris. <a href="#">@bulmaio</a>.
-						      			<a href="#">#css</a> <a href="#">#responsive</a>
+						      			Phasellus nec iaculis mauris.
 						      			<br>
-						      			<small>11:09 PM - 1 Jan 2016</small>
 						    		</div>
 								</div>
 							</div>
@@ -212,22 +174,14 @@
 								</div>
 								<div class="card-content">
 								    <div class="media">
-									    <div class="media-left">
-									        <figure class="image is-32x32">
-									          <img src="http://placehold.it/64x64" alt="Image">
-									        </figure>
-									    </div>
 								    	<div class="media-content">
 								        	<p class="title is-5">John Smith</p>
-								        	<p class="subtitle is-6">@johnsmith</p>
 								      	</div>
 							   		</div>
 						    		<div class="content">
 						      			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						      			Phasellus nec iaculis mauris. <a href="#">@bulmaio</a>.
-						      			<a href="#">#css</a> <a href="#">#responsive</a>
+						      			Phasellus nec iaculis mauris.
 						      			<br>
-						      			<small>11:09 PM - 1 Jan 2016</small>
 						    		</div>
 								</div>
 							</div>
@@ -241,22 +195,14 @@
 								</div>
 								<div class="card-content">
 								    <div class="media">
-									    <div class="media-left">
-									        <figure class="image is-32x32">
-									          <img src="http://placehold.it/64x64" alt="Image">
-									        </figure>
-									    </div>
 								    	<div class="media-content">
 								        	<p class="title is-5">John Smith</p>
-								        	<p class="subtitle is-6">@johnsmith</p>
 								      	</div>
 							   		</div>
 						    		<div class="content">
 						      			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						      			Phasellus nec iaculis mauris. <a href="#">@bulmaio</a>.
-						      			<a href="#">#css</a> <a href="#">#responsive</a>
+						      			Phasellus nec iaculis mauris.
 						      			<br>
-						      			<small>11:09 PM - 1 Jan 2016</small>
 						    		</div>
 								</div>
 							</div>
@@ -270,22 +216,14 @@
 								</div>
 								<div class="card-content">
 								    <div class="media">
-									    <div class="media-left">
-									        <figure class="image is-32x32">
-									          <img src="http://placehold.it/64x64" alt="Image">
-									        </figure>
-									    </div>
 								    	<div class="media-content">
 								        	<p class="title is-5">John Smith</p>
-								        	<p class="subtitle is-6">@johnsmith</p>
 								      	</div>
 							   		</div>
 						    		<div class="content">
 						      			Lorem ipsum dolor sit amet, consectetur adipiscing elit.
-						      			Phasellus nec iaculis mauris. <a href="#">@bulmaio</a>.
-						      			<a href="#">#css</a> <a href="#">#responsive</a>
+						      			Phasellus nec iaculis mauris.
 						      			<br>
-						      			<small>11:09 PM - 1 Jan 2016</small>
 						    		</div>
 								</div>
 							</div>
