--- a/index.html
+++ b/index.html
@@ -51,12 +51,14 @@
 		<section id="home" class="hero is-dark is-fullheight">
 			<div class="hero-body">
 				<div class="container">
-					<h1 class="title">
-						Home
-					</h1>
-					<h2 class="subtitle">
-					Home Subtitulo
-					</h2>
+					<div class="heading has-text-centered">
+						<h1 class="title">
+							Home
+						</h1>
+						<h2 class="subtitle">
+						Home Subtitulo
+						</h2>
+					</div>
 				</div>
 			</div>
 		</section>
