--- a/sobre.html
+++ b/sobre.html
@@ -51,12 +51,14 @@
 		<section id="home" class="hero is-info is-fullheight">
 			<div class="hero-body">
 				<div class="container">
-					<h1 class="title">
-						Sobre
-					</h1>
-					<h2 class="subtitle">
-					Home Subtitulo
-					</h2>
+					<div class="heading has-text-centered">
+						<h1 class="title">
+							Sobre
+						</h1>
+						<h2 class="subtitle">
+						Sobre Subtitulo
+						</h2>
+					</div>
 				</div>
 			</div>
 		</section>
